@@ -38,7 +38,6 @@ import java.util.List;
 
 import org.eclipse.emf.common.notify.AdapterFactory;
 import org.eclipse.emf.common.notify.Notification;
-import org.eclipse.emf.common.util.ResourceLocator;
 import org.eclipse.emf.ecore.EStructuralFeature;
 import org.eclipse.emf.edit.provider.ComposeableAdapterFactory;
 import org.eclipse.emf.edit.provider.IEditingDomainItemProvider;
@@ -47,7 +46,6 @@ import org.eclipse.emf.edit.provider.IItemPropertyDescriptor;
 import org.eclipse.emf.edit.provider.IItemPropertySource;
 import org.eclipse.emf.edit.provider.IStructuredItemContentProvider;
 import org.eclipse.emf.edit.provider.ITreeItemContentProvider;
-import org.eclipse.emf.edit.provider.ItemPropertyDescriptor;
 import org.eclipse.emf.edit.provider.ViewerNotification;
 
 import tudresden.ocl20.pivot.pivotmodel.Operation;
@@ -209,12 +207,24 @@ public class OperationItemProvider extends FeatureItemProvider implements
 	/**
 	 * This returns Operation.gif.
 	 * <!-- begin-user-doc --> <!-- end-user-doc -->
-	 * @generated
+	 * @generated NOT
 	 */
 	@Override
 	public Object getImage(Object object) {
-		return overlayImage(object,
-				getResourceLocator().getImage("full/obj16/Operation")); //$NON-NLS-1$
+		
+		Object result;
+
+		if (object instanceof Operation && ((Operation) object).isStatic()) {
+			result = overlayImage(object,
+					getResourceLocator().getImage("full/obj16/StaticOperation"));
+		}
+
+		else {
+			result = overlayImage(object,
+					getResourceLocator().getImage("full/obj16/Operation"));
+		}
+		
+		return result;
 	}
 
 	/**
